# frambuff_compress

./: CMakeLists.txt  README.md
include/: global.h
prebuild/: generate_frambuffer_data.cmd
src/: compress.c  main.c
